--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,7 @@
                 src: url('../fonts/GothamProNarrow-Medium.eot');
                 src: local('../fonts/Gotham Pro Narrow Medium'), local('../fonts/GothamProNarrow-Medium'), url('../fonts/GothamProNarrow-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/GothamProNarrow-Medium.woff') format('woff'), url('../fonts/GothamProNarrow-Medium.ttf') format('truetype');
                 font-weight: 500;
-                font-style: normal;
+                font-style: norma;
             }
             
             @font-face {
@@ -48,32 +48,420 @@
                 font-size: large;
             }
             
+            @mixin text_about {
+                color: white;
+                padding-left: 27%;
+                padding-right: 16%;
+            }
+            
+            @mixin text_title {
+                font-family: 'Intro', sans-serif;
+                font-weight: $fw-medium;
+                font-size: 36px;
+            }
+            
             //--Mixine--//
             //===Variables====/
+            $fw-regular: 400;
+            $fw-medium: 500;
+            $fw-bold: 800;
+            $padding-vertical:200px;
+            $color-back: #e9b979;
             //===Variables====/
+            /*--COMMON--*/
+            
+            a {
+                text-decoration: none;
+            }
+            
             body {
                 @include gotham;
             }
             
+            .out-wrapper {
+                width: 100%;
+                background: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+            
             .main_wrapper {
                 max-width: 1452px;
-                margin: 0px auto;
+                margin: 0 auto;
+                &--color {
+                    background: $color-back;
+                }
+            }
+            /*--/COMMON--*/
+            
+            // --HEADER--
+            .section-header {
+                width: 100%;
             }
             
             .header {
                 width: 100%;
+                padding-top: 50px;
+                padding-bottom: 50px;
                 margin: 0px auto;
-                .header_menu {
-                    width: 100%;
-                    margin: 0px auto;
-                    display: flex;
-                    flex-basis: 30%;
-                    flex-flow: row;
-                }
-            }
-            
-            .header_menu_info {
+                width: 100%;
+                margin: 0px auto;
                 display: flex;
                 flex-basis: 30%;
                 flex-flow: row;
+                justify-content: center;
+                align-content: center;
+                position: relative;
             }
+            
+            .nav-menu__info {
+                display: flex;
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                &-item {
+                    margin: 0px 16px;
+                    &-link {
+                        font-size: 15px;
+                        color: black;
+                        font-weight: $fw-regular;
+                        &--active {
+                            color: $color-back;
+                            font-weight: $fw-medium;
+                        }
+                    }
+                }
+            }
+            
+            .header_logo {
+                margin: 0 auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                &_img a {
+                    margin: 0 auto;
+                }
+                &_title {
+                    display: block;
+                    margin: 0 auto;
+                    &_link {
+                        color: black;
+                        font-family: "Intro";
+                        font-size: 15px;
+                        font-weight: $fw-medium;
+                    }
+                }
+            }
+            
+            .header_wrap {
+                position: absolute;
+                bottom: 35px;
+                right: 40px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                &_btn_basket {
+                    height: 20x;
+                    width: 20px;
+                    padding: 0px;
+                    color: black;
+                    font-size: $fw-medium;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
+                }
+            }
+            
+            .header_search {
+                line-height: 1px;
+                z-index: 5;
+                transform: translate(-50%, 50%);
+                background: whitesmoke;
+                height: 30px;
+                padding: 2px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                &:hover {
+                    border: 1px solid black;
+                }
+                &_form {
+                    border: none;
+                    background: none;
+                    outline: none;
+                    float: left;
+                    padding: 0px;
+                    color: black;
+                    font-size: $fw-medium;
+                    transition: 2s;
+                    line-height: 30px;
+                    width: 0px;
+                    transition: 1s;
+                }
+                &_btn_search {
+                    color: black;
+                    float: right;
+                    height: 20px;
+                    width: 20px;
+                    margin-left: 3px;
+                    background: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-decoration: none;
+                }
+            }
+            
+            .header_search:hover>.header_search_form {
+                width: 230px;
+                padding: 0 5px;
+            }
+            
+            // --/HEADER--
+            //---Banner--- 
+            .section-banner {
+                width: 100%;
+                min-height: 585px;
+                background-size: cover;
+                // background-repeat: no-repeat;
+                background-image: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)), url(../img/foto.png);
+                .main_wrapper {
+                    height: 100%;
+                    padding-top: 120px;
+                    padding-bottom: 154px;
+                }
+            }
+            
+            .banner {
+                display: flex;
+                flex-flow: column;
+                align-items: center;
+                justify-content: center;
+                color: whitesmoke;
+                &__subtitle {
+                    font-size: 18px;
+                    font-weight: $fw-regular;
+                    margin-bottom: 30px;
+                }
+                &__title h1 {
+                    font-family: 'Intro';
+                    font-size: 108px;
+                    font-weight: $fw-bold;
+                    margin-bottom: 100px;
+                }
+                &__btn {
+                    height: 70px;
+                    width: 300px;
+                    background-color: $color-back;
+                    border-radius: 30px;
+                    font-size: 28px;
+                    font-weight: $fw-regular;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            
+            //---/Banner--- 
+            // --About us--
+            .section-about_us {
+                width: 100%;
+                background: $color-back;
+                border-bottom: 2px solid white;
+                display: flex;
+                flex-direction: row;
+                justify-content: right;
+                align-items: center;
+            }
+            
+            .about__wrap__image {
+                width: 54%;
+                max-width: 100%;
+                margin-right: 0px;
+                margin-left: auto;
+                &_item {
+                    object-fit: cover;
+                }
+            }
+            
+            .about__wrap {
+                width: 46%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            
+            .about__wrap__text {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 14%, 22%, 11%, 22%;
+                &_title {
+                    @include text_about;
+                    text-align: left;
+                    margin-bottom: 60px;
+                }
+                &_inner {
+                    @include text_about;
+                    text-align: justify;
+                    margin-bottom: 18px;
+                }
+                &_link {
+                    display: block;
+                    @include text_about;
+                    text-align: left;
+                    margin-top: 70px;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+            
+            // --/About us--
+            // --Bestseller--
+            .section-bestseller {
+                width: 100%;
+                .main_wrapper {
+                    padding-top: 160px;
+                    padding-bottom: 220px;
+                }
+            }
+            
+            .bestsaller_title {
+                @include text_title;
+                text-align: center;
+                margin-bottom: 80px;
+            }
+            
+            .bestsaller_block {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                &_image {
+                    margin: 0 auto;
+                    width: 80%;
+                    box-shadow: -3px 3px 30px rgba(0, 0, 0, 0.3);
+                }
+                &_item {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    padding: 10%;
+                    margin: 0 auto;
+                    &_text {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: left;
+                        &_title {
+                            text-align: left;
+                        }
+                        &_subtitle {
+                            text-align: left;
+                        }
+                    }
+                    &_subtitle-btn {
+                        border: 3px solid $color-back;
+                        border-radius: 40px;
+                        text-align: center;
+                        color: $color-back;
+                        padding: 3px;
+                        height: 32px;
+                        width: 120px;
+                        margin-right: 2px;
+                    }
+                }
+            }
+            
+            .bestsaller_link {
+                display: flex;
+                justify-content: center;
+                & a {
+                    display: inline-block;
+                    color: $color-back;
+                    margin: 0 auto;
+                    text-align: center;
+                    text-decoration: underline;
+                }
+            }
+            
+            // --/Bestseller--
+            // --Zabota--
+            .section-zabota {
+                background: $color-back;
+                width: 100%;
+                .main_wrapper {
+                    padding-top: 120px;
+                    padding-bottom: 90px;
+                }
+            }
+            
+            // --/Zabota--
+            // --bonus--
+            .section-bonus {
+                width: 100%;
+                .main_wrapper {
+                    padding-top: 194px;
+                    padding-bottom: 230px;
+                }
+            }
+            
+            .bonus_wrap {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .bonus_item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    &_logo {
+                        width: 140px;
+                        height: 140px;
+                        -webkit-border-radius: 70px;
+                        -moz-border-radius: 70px;
+                        border-radius: 70px;
+                        border: 3px solid black;
+                    }
+                    &_title {
+                        margin-top: 50px;
+                        width: 70%;
+                        font-size: 26px;
+                        text-align: center;
+                    }
+                }
+            }
+            
+            // --/bonus--
+            // --gallery--
+            .section-gallery {
+                width: 100%;
+                .main_wrapper {
+                    padding-top: 130px;
+                    padding-bottom: 88px;
+                }
+            }
+            
+            // --/gallery--
+            // --footer--
+            .section-footer {
+                width: 100%;
+                background: $color-back;
+                .main_wrapper {
+                    padding-top: 75px;
+                    padding-bottom: 80px;
+                }
+            }
+            
+            .footer_wrap {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+            
+            // --footer--//
