--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -1,11 +1,11 @@
 html {
-  line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+    line-height: 1.15;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 article,
@@ -14,121 +14,126 @@ footer,
 header,
 nav,
 section {
-  display: block;
+    display: block;
 }
 
 section,
 .block,
 .photo {
-  position: relative;
+    position: relative;
 }
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+    font-size: 2em;
+    margin: 0.67em 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+    margin: 0;
 }
 
 figcaption,
 figure,
 main {
-  display: block;
+    display: block;
 }
 
 figure {
-  margin: 1em 40px;
+    margin: 1em 40px;
 }
 
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
 }
 
 pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
 
 a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-  cursor: pointer;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+    cursor: pointer;
 }
 
 abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+    border-bottom: none;
+    text-decoration: underline;
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
 }
 
 b,
 strong {
-  font-weight: inherit;
+    font-weight: inherit;
 }
 
 b,
 strong {
-  font-weight: bolder;
+    font-weight: bolder;
 }
 
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
 
 dfn {
-  font-style: italic;
+    font-style: italic;
 }
 
 mark {
-  background-color: #ff0;
-  color: #000;
+    background-color: #ff0;
+    color: #000;
 }
 
 small {
-  font-size: 80%;
+    font-size: 80%;
 }
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+    bottom: -0.25em;
 }
 
 sup {
-  top: -0.5em;
+    top: -0.5em;
 }
 
 video {
-  display: inline-block;
+    display: inline-block;
 }
 
 audio:not([controls]) {
-  display: none;
-  height: 0;
+    display: none;
+    height: 0;
 }
 
 img {
-  border-style: none;
+    border-style: none;
 }
 
 svg:not(:root) {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 button,
@@ -136,159 +141,164 @@ input,
 optgroup,
 select,
 textarea {
-  border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
+    border: 0;
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
 }
 
 button,
 input,
 textarea {
-  overflow: visible;
-  background: transparent;
+    overflow: visible;
+    background: transparent;
 }
 
 table {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
 button,
 select {
-  text-transform: none;
+    text-transform: none;
 }
 
 button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+    -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
+    border-style: none;
+    padding: 0;
 }
 
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+    outline: 1px dotted ButtonText;
 }
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+    padding: 0.35em 0.75em 0.625em;
 }
 
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: inherit;
+    display: table;
+    max-width: 100%;
+    padding: 0;
+    white-space: normal;
 }
 
 progress {
-  display: inline-block;
-  vertical-align: baseline;
+    display: inline-block;
+    vertical-align: baseline;
 }
 
 textarea {
-  overflow: auto;
-  resize: none;
+    overflow: auto;
+    resize: none;
 }
 
 [type="checkbox"],
 [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  cursor: pointer;
-  padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    cursor: pointer;
+    padding: 0;
 }
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+    height: auto;
 }
 
 [type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
 }
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+    -webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
+    -webkit-appearance: button;
+    font: inherit;
 }
 
 details,
 menu {
-  display: block;
+    display: block;
 }
 
 summary {
-  display: list-item;
+    display: list-item;
 }
 
 canvas {
-  display: inline-block;
+    display: inline-block;
 }
 
 template {
-  display: none;
+    display: none;
 }
 
 [hidden] {
-  display: none;
+    display: none;
 }
 
-ol, ul {
-  position: relative;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+ol,
+ul {
+    position: relative;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 ol {
-  list-style-type: decimal;
+    list-style-type: decimal;
 }
 
-ol li, ul li, label {
-  position: relative;
+ol li,
+ul li,
+label {
+    position: relative;
 }
 
-button, input[type="submit"], select {
-  background: transparent;
-  cursor: pointer;
-  padding: 0;
+button,
+input[type="submit"],
+select {
+    background: transparent;
+    cursor: pointer;
+    padding: 0;
 }
 
 input[type="submit"]:disabled {
-  cursor: auto;
+    cursor: auto;
 }
 
 p {
-  margin: 0;
+    margin: 0;
 }
 
 :focus {
-  outline: none;
+    outline: none;
 }
 
 :focus {
-  -moz-outline: 3px solid #fff !important;
+    -moz-outline: 3px solid #fff !important;
 }
 
 button::-moz-focus-inner,
@@ -296,33 +306,37 @@ input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
-input[type="file"] > input[type="button"]::-moz-focus-inner {
-  border: none;
+input[type="file"]>input[type="button"]::-moz-focus-inner {
+    border: none;
 }
 
 input[type="radio"]:focus {
-  -moz-outline-radius: 12px !important;
-  -moz-outline-offset: 0px !important;
+    -moz-outline-radius: 12px !important;
+    -moz-outline-offset: 0px !important;
 }
 
 input[type="checkbox"]:focus {
-  -moz-outline-offset: -1px !important;
-  -moz-outline: 1px solid #000 !important;
+    -moz-outline-offset: -1px !important;
+    -moz-outline: 1px solid #000 !important;
 }
 
-*, :after, :before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+*,
+ :after,
+ :before {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .clearfix:after {
-  content: "";
-  display: block;
-  clear: both;
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .bx-wrapper {
-  position: relative;
-  margin: auto;
+    position: relative;
+    margin: auto;
 }
+
+
 /*# sourceMappingURL=normalize.css.map */
