--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,11 +57,45 @@ body {
 
 .main_wrapper {
   max-width: 1452px;
+  width: 100%;
   margin: 0 auto;
 }
 
 .main_wrapper--color {
   background: #e9b979;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+          animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*--/COMMON--*/
@@ -79,15 +113,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-flow: row;
           flex-flow: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
   position: relative;
@@ -135,6 +167,8 @@ body {
 }
 
 .header_logo_img a {
+  max-width: 100px;
+  max-height: 100px;
   margin: 0 auto;
 }
 
@@ -321,28 +355,49 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .about__wrap__image {
-  width: 54%;
-  max-width: 100%;
+  width: 54vw;
+  height: 800px;
   margin-right: 0px;
   margin-left: auto;
+  background: url(../img/interer_1.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .about__wrap__image_item {
   -o-object-fit: cover;
      object-fit: cover;
+  overflow: hidden;
+}
+
+/*стили для воторго блока, выравниванеи слева*/
+.about__wrap__image_2 {
+  width: 54vw;
+  height: 800px;
+  margin-right: auto;
+  margin-left: 0px;
+  background: url(../img/interer_2.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.about__wrap__image_2_item {
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
 }
 
 .about__wrap {
-  width: 46%;
+  width: 46vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -520,7 +575,7 @@ body {
 
 .section-bonus .main_wrapper {
   padding-top: 194px;
-  padding-bottom: 230px;
+  padding-bottom: 30px;
 }
 
 .bonus_wrap {
@@ -557,6 +612,20 @@ body {
   height: 140px;
   border-radius: 70px;
   border: 3px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.bonus_wrap .bonus_item_logo_image {
+  width: 80%;
+  height: 80%;
 }
 
 .bonus_wrap .bonus_item_title {
@@ -570,9 +639,169 @@ body {
   width: 100%;
 }
 
-.section-gallery .main_wrapper {
-  padding-top: 130px;
-  padding-bottom: 88px;
+.gallery_wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.gallery_wrap .gallery_title {
+  width: 25vw;
+  min-height: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.gallery_wrap .gallery_title_head {
+  font-family: 'Intro', sans-serif;
+  font-size: large;
+  margin-bottom: 15px;
+  font-size: 36px;
+  padding-right: 50px;
+}
+
+.gallery_wrap .gallery_title_subtitle {
+  font-size: 20px;
+  color: gray;
+  font-weight: 400;
+  padding-right: 50px;
+  text-decoration: underline;
+}
+
+.slaider_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.slaider_wrapper .gallery {
+  width: 100%;
+  height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.slaider_wrapper .gallery .gallery_smoll {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 660px;
+  max-height: 540px;
+}
+
+.slaider_wrapper .gallery .gallery_smoll_items img {
+  height: 100%;
+  max-width: 540px;
+  max-height: 560px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.slaider_wrapper .gallery .gallery_smoll_items_active {
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+}
+
+.slaider_wrapper .gallery .gallery_prew {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 400px;
+  max-height: 500px;
+}
+
+.slaider_wrapper .gallery .gallery_prew_items img {
+  display: block;
+  margin: 10px;
+  max-width: 300px;
+  max-height: 180px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.slaider_wrapper .tabheader__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.slaider_wrapper .tabheader__items .tabheader__item {
+  margin-left: 15px;
+  width: 15px;
+  height: 15px;
+  border: 3px solid #acaaaa;
+  border-radius: 50%;
+}
+
+.slaider_wrapper .tabheader__items .tabheader__item_active {
+  background: #acaaaa;
 }
 
 .section-footer {
@@ -595,5 +824,76 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  font-weight: 500;
+}
+
+.footer_wrap .footer_koord {
+  padding-left: 15px;
+  width: 33.3%;
+}
+
+.footer_wrap .footer_koord_adress {
+  margin-bottom: 10px;
+}
+
+.footer_wrap .footer_logo {
+  width: 33.3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer_wrap .footer_logo_img {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.footer_wrap .footer_telephon {
+  width: 33.3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 15px;
+}
+
+.footer_wrap .footer_telephon h3 {
+  margin-bottom: 10px;
+}
+
+.footer_wrap .footer_telephon_social {
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.footer_wrap .footer_telephon_social a {
+  margin: 0px 8px;
+  text-decoration: none;
+  color: black;
+}
+
+.developer {
+  text-align: center;
+  font-size: 12px;
+  color: gray;
 }
 /*# sourceMappingURL=style.css.map */
