--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -88,9 +88,32 @@
             
             .main_wrapper {
                 max-width: 1452px;
+                width: 100%;
                 margin: 0 auto;
                 &--color {
                     background: $color-back;
+                }
+            }
+            
+            .show {
+                display: block;
+            }
+            
+            .hide {
+                display: none;
+            }
+            
+            .fade {
+                animation-name: fade;
+                animation-duration: 1.5s;
+            }
+            
+            @keyframes fade {
+                from {
+                    opacity: 0.1;
+                }
+                to {
+                    opacity: 1;
                 }
             }
             /*--/COMMON--*/
@@ -108,9 +131,9 @@
                 width: 100%;
                 margin: 0px auto;
                 display: flex;
-                flex-basis: 30%;
+                // flex-basis: 33%;
                 flex-flow: row;
-                justify-content: center;
+                justify-content: space-between;
                 align-content: center;
                 position: relative;
             }
@@ -141,6 +164,8 @@
                 justify-content: center;
                 flex-direction: column;
                 &_img a {
+                    max-width: 100px;
+                    max-height: 100px;
                     margin: 0 auto;
                 }
                 &_title {
@@ -273,22 +298,41 @@
                 border-bottom: 2px solid white;
                 display: flex;
                 flex-direction: row;
-                justify-content: right;
+                justify-content: flex-end;
                 align-items: center;
             }
             
             .about__wrap__image {
-                width: 54%;
-                max-width: 100%;
+                width: 54vw;
+                height: 800px;
                 margin-right: 0px;
                 margin-left: auto;
+                background: url(../img/interer_1.png);
+                background-repeat: no-repeat;
+                background-size: contain;
                 &_item {
                     object-fit: cover;
+                    overflow: hidden;
+                }
+            }
+            /*стили для воторго блока, выравниванеи слева*/
+            
+            .about__wrap__image_2 {
+                width: 54vw;
+                height: 800px;
+                margin-right: auto;
+                margin-left: 0px;
+                background: url(../img/interer_2.png);
+                background-repeat: no-repeat;
+                background-size: contain;
+                &_item {
+                    object-fit: cover;
+                    overflow: hidden;
                 }
             }
             
             .about__wrap {
-                width: 46%;
+                width: 46vw;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -406,7 +450,7 @@
                 width: 100%;
                 .main_wrapper {
                     padding-top: 194px;
-                    padding-bottom: 230px;
+                    padding-bottom: 30px;
                 }
             }
             
@@ -427,6 +471,13 @@
                         -moz-border-radius: 70px;
                         border-radius: 70px;
                         border: 3px solid black;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        &_image {
+                            width: 80%;
+                            height: 80%;
+                        }
                     }
                     &_title {
                         margin-top: 50px;
@@ -441,9 +492,100 @@
             // --gallery--
             .section-gallery {
                 width: 100%;
-                .main_wrapper {
-                    padding-top: 130px;
-                    padding-bottom: 88px;
+            }
+            
+            .gallery_wrap {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                flex-basis: 50%;
+                align-items: center;
+                justify-content: space-between;
+                .gallery_title {
+                    width: 25vw;
+                    min-height: 800px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+                    justify-content: center;
+                    &_head {
+                        @include intro;
+                        margin-bottom: 15px;
+                        font-size: 36px;
+                        padding-right: 50px;
+                    }
+                    &_subtitle {
+                        font-size: 20px;
+                        color: gray;
+                        font-weight: $fw-regular;
+                        padding-right: 50px;
+                        text-decoration: underline;
+                    }
+                }
+            }
+            
+            .slaider_wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                .gallery {
+                    width: 100%;
+                    height: 600px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .gallery_smoll {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        max-width: 660px;
+                        max-height: 540px;
+                        &_items img {
+                            height: 100%;
+                            max-width: 540px;
+                            max-height: 560px;
+                            object-fit: contain;
+                        }
+                        &_items_active {
+                            width: 100%;
+                            height: 100%;
+                            margin: 10px;
+                        }
+                    }
+                    .gallery_prew {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        max-width: 400px;
+                        max-height: 500px;
+                        &_items img {
+                            display: block;
+                            margin: 10px;
+                            max-width: 300px;
+                            max-height: 180px;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: contain;
+                        }
+                    }
+                }
+                .tabheader__items {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .tabheader__item {
+                        margin-left: 15px;
+                        width: 15px;
+                        height: 15px;
+                        border: 3px solid rgb(172, 170, 170);
+                        border-radius: 50%;
+                    }
+                    .tabheader__item_active {
+                        background: rgb(172, 170, 170);
+                    }
                 }
             }
             
@@ -462,6 +604,51 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                font-weight: $fw-medium;
+                .footer_koord {
+                    padding-left: 15px;
+                    width: 33.3%;
+                    &_adress {
+                        margin-bottom: 10px;
+                    }
+                }
+                .footer_logo {
+                    width: 33.3%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    &_img {
+                        display: block;
+                        margin-bottom: 10px;
+                    }
+                }
+                .footer_telephon {
+                    width: 33.3%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+                    justify-content: flex-end;
+                    padding-right: 15px;
+                    & h3 {
+                        margin-bottom: 10px;
+                    }
+                    &_social {
+                        margin-top: 20px;
+                        font-size: 20px;
+                        & a {
+                            margin: 0px 8px;
+                            text-decoration: none;
+                            color: black;
+                        }
+                    }
+                }
+            }
+            
+            .developer {
+                text-align: center;
+                font-size: 12px;
+                color: gray;
             }
             
             // --footer--//
