--- a/src/css/style.css
+++ b/src/css/style.css
@@ -896,4 +896,74 @@ body {
   font-size: 12px;
   color: gray;
 }
+
+.section-head_questions {
+  font-family: 'Intro', sans-serif;
+  font-size: large;
+  font-size: 36px;
+  text-align: center;
+}
+
+.section-head_questions h1 {
+  margin-top: 100px;
+}
+
+.section-head_about {
+  font-family: 'Gotham Pro Narrow', sans-serif;
+  font-size: 26px;
+  margin-top: 200px;
+  color: #e9b979;
+}
+
+.quest_wrap {
+  font-family: 'Gotham Pro Narrow', sans-serif;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: left;
+  margin: 50px auto;
+}
+
+.quest_wrap_questions {
+  padding-top: 30px;
+  padding-left: 30px;
+  width: 100%;
+  height: 110px;
+  text-align: left;
+  border-bottom: 2px solid gray;
+}
+
+.quest_wrap_questions_plus {
+  position: relative;
+  border: 3px dotted #0c0000;
+  width: 3px;
+  height: 3px;
+  background-color: #f6f4f4;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transform: scale(11);
+          transform: scale(11);
+}
+
+.quest_wrap_answer {
+  padding-top: 30px;
+  padding-left: 30px;
+  height: 110px;
+  width: 100%;
+  text-align: left;
+  border-bottom: 2px solid gray;
+  display: none;
+  background: #cfcece;
+}
 /*# sourceMappingURL=style.css.map */
