--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -652,3 +652,56 @@
             }
             
             // --footer--//
+            .section-head_questions {
+                @include intro;
+                font-size: 36px;
+                text-align: center;
+                & h1 {
+                    margin-top: 100px;
+                }
+            }
+            
+            .section-head_about {
+                @include gotham;
+                font-size: 26px;
+                margin-top: 200px;
+                color: $color-back;
+            }
+            
+            .quest_wrap {
+                @include gotham;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: left;
+                margin: 50px auto;
+                &_questions {
+                    padding-top: 30px;
+                    padding-left: 30px;
+                    width: 100%;
+                    height: 110px;
+                    text-align: left;
+                    border-bottom: 2px solid gray;
+                    &_plus {
+                        position: relative;
+                        border: 3px dotted rgb(12, 0, 0);
+                        width: 3px;
+                        height: 3px;
+                        background-color: rgb(246, 244, 244);
+                        box-sizing: border-box;
+                        transform: scale(11);
+                    }
+                }
+                &_answer {
+                    padding-top: 30px;
+                    padding-left: 30px;
+                    height: 110px;
+                    width: 100%;
+                    text-align: left;
+                    border-bottom: 2px solid gray;
+                    display: none;
+                    background: rgb(207, 206, 206);
+                }
+            }
