--- a/src/css/style.css
+++ b/src/css/style.css
@@ -900,7 +900,7 @@ body {
 .section-head_questions {
   font-family: 'Intro', sans-serif;
   font-size: large;
-  font-size: 36px;
+  font-size: 42px;
   text-align: center;
 }
 
@@ -932,7 +932,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: left;
-  margin: 50px auto;
+  margin: 100px auto;
 }
 
 .quest_wrap_questions {
@@ -944,26 +944,134 @@ body {
   border-bottom: 2px solid gray;
 }
 
-.quest_wrap_questions_plus {
-  position: relative;
-  border: 3px dotted #0c0000;
-  width: 3px;
-  height: 3px;
-  background-color: #f6f4f4;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-transform: scale(11);
-          transform: scale(11);
-}
-
 .quest_wrap_answer {
   padding-top: 30px;
   padding-left: 30px;
-  height: 110px;
+  height: 140px;
   width: 100%;
   text-align: left;
   border-bottom: 2px solid gray;
   display: none;
   background: #cfcece;
+}
+
+.plus {
+  margin-right: 30px;
+  float: right;
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+
+.vert {
+  margin: 0px auto;
+  width: 5px;
+  height: 30px;
+  background: #868585;
+}
+
+.gorinont {
+  position: absolute;
+  top: 12.5px;
+  width: 30px;
+  height: 5px;
+  background: #868585;
+}
+
+.section-form .contact-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-form .contact-form__title {
+  font-size: 28px;
+  font-weight: 500;
+  margin: 30px 0 30px 0;
+  padding-left: 13%;
+}
+
+.section-form .contact-form__input-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-form .contact-form__input {
+  width: 33%;
+  font-size: 24px;
+  margin: 50px;
+  border-bottom: 2px solid #ddd8d8;
+}
+
+.section-form .contact-form__button {
+  margin: 0 auto;
+  width: 150px;
+  height: 50px;
+  background: #e9b979;
+  border-radius: 30px;
+}
+
+.section-form .input-file__button {
+  margin: 0 auto;
+  width: 150px;
+  height: 50px;
+  background: #e9b979;
+  border-radius: 30px;
+}
+
+.section-pay h1 {
+  margin: 30px auto;
+}
+
+.section-pay .section-pay_description_head {
+  font-size: 34px;
+  margin: 30px auto;
+}
+
+.section-pay .section-pay_description_text {
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.section-pay .section-pay_description_var {
+  font-size: 28px;
+  margin: 30px auto;
+}
+
+.section-pay .section-pay_description_rekvisit {
+  text-align: center;
+  font-size: 30px;
+  margin: 30px auto;
+}
+
+.section-map iframe {
+  margin: 80px auto;
+}
+
+.section-reclam .main_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-reclam iframe {
+  margin: 40px auto;
 }
 /*# sourceMappingURL=style.css.map */
