--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,6 +125,10 @@ body {
   position: relative;
 }
 
+.header nav {
+  width: 33.3%;
+}
+
 .nav-menu__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -150,7 +154,7 @@ body {
 }
 
 .header_logo {
-  margin: 0 auto;
+  width: 33.3%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,8 +350,8 @@ body {
 
 .section-about_us {
   width: 100%;
+  height: 803px;
   background: #e9b979;
-  border-bottom: 2px solid white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -355,61 +359,16 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.about__wrap__image {
-  width: 54vw;
-  height: 800px;
-  margin-right: 0px;
-  margin-left: auto;
-  background: url(../img/interer_1.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.about__wrap__image_item {
-  -o-object-fit: cover;
-     object-fit: cover;
-  overflow: hidden;
 }
 
 /*стили для воторго блока, выравниванеи слева*/
-.about__wrap__image_2 {
-  width: 54vw;
-  height: 800px;
-  margin-right: auto;
-  margin-left: 0px;
-  background: url(../img/interer_2.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.about__wrap__image_2_item {
-  -o-object-fit: cover;
-     object-fit: cover;
-  overflow: hidden;
-}
-
 .about__wrap {
-  width: 46vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.about__wrap__text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -423,10 +382,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 14%, 22%, 11%, 22%;
+  margin: 30%, 22%, 11%, 22%;
 }
 
-.about__wrap__text_title {
+.about__wrap_title {
   color: white;
   padding-left: 27%;
   padding-right: 16%;
@@ -434,7 +393,7 @@ body {
   margin-bottom: 60px;
 }
 
-.about__wrap__text_inner {
+.about__wrap_inner {
   color: white;
   padding-left: 27%;
   padding-right: 16%;
@@ -442,7 +401,7 @@ body {
   margin-bottom: 18px;
 }
 
-.about__wrap__text_link {
+.about__wrap_link {
   display: block;
   color: white;
   padding-left: 27%;
@@ -451,7 +410,7 @@ body {
   margin-top: 70px;
 }
 
-.about__wrap__text_link:hover {
+.about__wrap_link:hover {
   text-decoration: underline;
 }
 
@@ -1074,4 +1033,105 @@ body {
 .section-reclam iframe {
   margin: 40px auto;
 }
+
+/*--page news--*/
+.section-news_block {
+  width: 100%;
+  height: 586px;
+  background: #e9b979;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+/*--/page news--*/
+/*==section-page about olha==*/
+.section-olha .section-olha_wrap {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1024px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-olha_subtitile {
+  text-align: center;
+  background: #ebe8e8;
+  border: 2px solid #fdfdfd;
+  padding: 20px;
+  margin: 30px;
+}
+
+.section-olha_article_header {
+  text-align: center;
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-bottom: 8px;
+}
+
+.section-olha_article_header:after {
+  content: "";
+  display: block;
+  background: #b1acac;
+  height: 2px;
+  width: 100%;
+}
+
+.section-olha_info {
+  text-align: left;
+  font-family: 'Gotham Pro', sans-serif;
+  font-weight: 800;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.section-olha_citate {
+  text-align: center;
+  padding: 1%;
+  background: #e9b979;
+}
+
+.section-olha_info_list {
+  background: #f1f1f1;
+  font-family: 'Gotham Pro', sans-serif;
+  list-style: disc outside;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+}
+
+.section-olha_info_list_item {
+  max-width: 70%;
+  margin-bottom: 6px;
+}
+
+/*==/section-page about olha==*/
 /*# sourceMappingURL=style.css.map */
