--- a/src/css/style.css
+++ b/src/css/style.css
@@ -348,6 +348,11 @@ body {
           justify-content: center;
 }
 
+.banner__btn:hover {
+  background-color: gray;
+  cursor: pointer;
+}
+
 .section-about_us {
   width: 100%;
   height: 803px;
@@ -1134,4 +1139,18 @@ body {
 }
 
 /*==/section-page about olha==*/
+.section-dev {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-dev-text {
+  text-align: center;
+  margin: 20vh;
+}
 /*# sourceMappingURL=style.css.map */
