--- a/src/css/style.css
+++ b/src/css/style.css
@@ -355,7 +355,7 @@ body {
 
 .section-about_us {
   width: 100%;
-  height: 803px;
+  height: auto;
   background: #e9b979;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -370,6 +370,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 20px auto;
 }
 
 /*стили для воторго блока, выравниванеи слева*/
