--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -2,6 +2,14 @@
 /*-mixine-*/
 /*adaptive*/
 @media (max-width: 1200px) {
+  .section-header .header {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .section-header .header .nav-menu__info-item {
+    margin: 0 3px;
+  }
   .banner__title h1 {
     font-size: 52px;
   }
@@ -34,7 +42,17 @@
     height: 1400px;
   }
   .about__wrap {
-    margin: 20%, 2%, 11%, 2%;
+    margin: 0;
+  }
+  .about__wrap_title {
+    text-align: center;
+    margin-bottom: 20px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .about__wrap_inner {
+    padding-left: 10%;
+    padding-right: 10%;
   }
   .news_block_image {
     display: -webkit-box;
@@ -87,20 +105,6 @@
     display: block;
     margin: 20px auto;
   }
-  .footer_wrap {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .footer_wrap .footer_telephon {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
   .bonus_wrap {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -113,14 +117,64 @@
   .bestsaller_title {
     font-size: 28px;
   }
+  .bestsaller_block_item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .bestsaller_block_item_subtitle-btn {
+    margin-top: 5px;
+  }
   .gallery_wrap {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .gallery_smoll {
-    display: none;
+  .gallery_wrap .gallery_title {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .tabheader__items {
+    margin-bottom: 15px;
+  }
+  /*--article_about--*/
+  .section-olha .section-olha_wrap {
+    max-width: 800px;
+    background: red;
+  }
+  /*--article_about--*/
+  .footer_wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer_wrap .footer_koord {
+    text-align: center;
+  }
+  .footer_wrap .footer_logo {
+    text-align: center;
+  }
+  .footer_wrap .footer_telephon {
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
