--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1071,12 +1071,17 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.section-olha_image {
+  width: 100%;
+  height: auto;
 }
 
 .section-olha_subtitile {
