--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -819,8 +819,12 @@
             display: flex;
             max-width: 1024px;
             flex-direction: column;
-            align-items: stretch;
+            align-items: center;
             justify-content: center;
+        }
+        &_image {
+            width: 100%;
+            height: auto;
         }
         &_subtitile {
             text-align: center;
