--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,11 +1,128 @@
 /*-mixine-*/
 /*-mixine-*/
 /*adaptive*/
+@media (max-width: 767px) {
+  body.lock {
+    overflow: hidden;
+  }
+  .section-header .header {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .section-header .header nav {
+    width: 0;
+  }
+  .section-header .header_logo {
+    width: 50%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .section-header .header:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 30;
+  }
+  .section-header .header .nav-menu__info {
+    display: none;
+  }
+  .section-header .header .nav-menu__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    z-index: 28;
+    position: fixed;
+    top: -100%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding-top: 180px;
+    background: white;
+    overflow: auto;
+    -webkit-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+  }
+  .section-header .header .nav-menu__burger-item {
+    margin-top: 10px;
+  }
+  .section-header .header .nav-menu__burger-item a {
+    color: black;
+    text-transform: uppercase;
+  }
+  .section-header .header .nav-menu__burger.active {
+    top: 0;
+  }
+  .section-header .header_burger {
+    display: block;
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 20px;
+    z-index: 30;
+  }
+  .section-header .header_burger span {
+    content: "";
+    background: #000;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 9px;
+    -webkit-transition: all 0.2s ease 0s;
+    transition: all 0.2s ease 0s;
+  }
+  .section-header .header_burger:before, .section-header .header_burger:after {
+    content: "";
+    background: #000;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    -webkit-transition: all 0.2s ease 0s;
+    transition: all 0.2s ease 0s;
+  }
+  .section-header .header_burger:before {
+    top: 0;
+  }
+  .section-header .header_burger:after {
+    bottom: 0;
+  }
+  .section-header .header_burger.active span {
+    display: none;
+  }
+  .section-header .header_burger.active:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 9px;
+  }
+  .section-header .header_burger.active:after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 9px;
+  }
+}
+
 @media (max-width: 1200px) {
   .section-header .header {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .section-header .header .nav-menu__info-item {
     margin: 0 3px;
@@ -145,6 +262,15 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .slaider_wrapper .gallery {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .slaider_wrapper .gallery_prew img {
+    display: none;
   }
   .tabheader__items {
     margin-bottom: 15px;
